--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,45 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/main.css">
-	<title>ToDo Task</title>
-</head> 
-<body class="bg-gray-200 flex items-center h-screen">
-	<div class="todo relative w-[90%] h-[90%] mx-auto p-10 bg-[#F8F8F8] rounded-md shadow-md">
-		<div class="border-b-2 border-gray-200 pb-4">
-			<p class="date-title text-3xl font-bold mb-2">
-				
-			</p>
-			<p class="status-title text-[#575767]  text">
-				0 incomplete, 0 completed
-			</p>
-		</div>
-		<div class="tasks-container flex mt-4">
-			<div class="w-1/2">
-				<div class="text-[#575767] text-lg font-bold">
-					<div class="select-none">
-						Incomplete
-					</div>
-				</div>
-				<div class="list-tasks-incompleted overflow-y-scroll">
-				
-				</div>
-			</div>
-			<div class="w-1/2">
-				<div class="flex items-center text-[#575767] text-lg font-bold">
-					<div class="select-none">
-						Completed
-					</div>
-					<div class="clear-done-tasks cursor-pointer ml-1">
-						<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 30 30">
-							<path fill="#575767" d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M16.414,15 c0,0,3.139,3.139,3.293,3.293c0.391,0.391,0.391,1.024,0,1.414c-0.391,0.391-1.024,0.391-1.414,0C18.139,19.554,15,16.414,15,16.414 s-3.139,3.139-3.293,3.293c-0.391,0.391-1.024,0.391-1.414,0c-0.391-0.391-0.391-1.024,0-1.414C10.446,18.139,13.586,15,13.586,15 s-3.139-3.139-3.293-3.293c-0.391-0.391-0.391-1.024,0-1.414c0.391-0.391,1.024-0.391,1.414,0C11.861,10.446,15,13.586,15,13.586 s3.139-3.139,3.293-3.293c0.391-0.391,1.024-0.391,1.414,0c0.391,0.391,0.391,1.024,0,1.414C19.554,11.861,16.414,15,16.414,15z"></path>
-						</svg>
-					</div>
-				</div>
-				<div class="list-tasks-completed overflow-y-scroll">
-					<!-- <div class="task flex items-start mt-4">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>ToDo Task</title>
+  </head>
+  <body
+    class="flex min-h-screen items-center bg-gray-200 px-4 xl:h-screen xl:px-0"
+  >
+    <div
+      class="todo relative mx-auto h-full w-full rounded-md bg-[#F8F8F8] p-10 xl:h-[90%] xl:w-[90%] xl:shadow-md"
+    >
+      <div class="border-b-2 border-gray-200 pb-4">
+        <p class="date-title mb-2 text-3xl font-bold"></p>
+        <p class="status-title text text-[#575767]">
+          0 incomplete, 0 completed
+        </p>
+      </div>
+      <div class="tasks-container mt-4 flex flex-col sm:flex-row">
+        <div class="sm:w-1/2">
+          <div class="text-lg font-bold text-[#575767]">
+            <div class="select-none">Incomplete</div>
+          </div>
+          <div
+            class="list-tasks-incompleted max-h-[15rem] overflow-y-scroll sm:max-h-[25rem]"
+          >
+            <!-- <div id="" class="task mt-4 flex items-start">
+              <div
+                class="task-checkbox mt-0.5 flex h-6 w-6 cursor-pointer items-center justify-center rounded-md border-2 border-gray-200"
+              >
+                <svg
+                  class="pointer-events-none opacity-0"
+                  width="10"
+                  height="10"
+                  viewBox="0 0 10 10"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 6L3.91667 9L9 1"
+                    stroke="#575767"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
+              <div class="task-deskription ml-4 flex w-full flex-col">
+                <input
+                  value=""
+                  placeholder="Task"
+                  data-deskription="title"
+                  class="task-title bg-transparent text-lg font-medium text-[#575767] focus-visible:outline-none"
+                />
+                <input
+                  value=""
+                  placeholder="Category"
+                  data-deskription="category"
+                  class="task-сategory mt-1 bg-transparent font-semibold text-[#B9B9BE] focus-visible:outline-none"
+                />
+              </div>
+            </div> -->
+          </div>
+        </div>
+        <div class="mt-4 sm:mt-0 sm:w-1/2">
+          <div class="flex items-center text-lg font-bold text-[#575767]">
+            <div class="select-none">Completed</div>
+            <div class="clear-done-tasks ml-1 cursor-pointer">
+              <svg
+                class="w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                x="0px"
+                y="0px"
+                viewBox="0 0 30 30"
+              >
+                <path
+                  fill="#575767"
+                  d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M16.414,15 c0,0,3.139,3.139,3.293,3.293c0.391,0.391,0.391,1.024,0,1.414c-0.391,0.391-1.024,0.391-1.414,0C18.139,19.554,15,16.414,15,16.414 s-3.139,3.139-3.293,3.293c-0.391,0.391-1.024,0.391-1.414,0c-0.391-0.391-0.391-1.024,0-1.414C10.446,18.139,13.586,15,13.586,15 s-3.139-3.139-3.293-3.293c-0.391-0.391-0.391-1.024,0-1.414c0.391-0.391,1.024-0.391,1.414,0C11.861,10.446,15,13.586,15,13.586 s3.139-3.139,3.293-3.293c0.391-0.391,1.024-0.391,1.414,0c0.391,0.391,0.391,1.024,0,1.414C19.554,11.861,16.414,15,16.414,15z"
+                ></path>
+              </svg>
+            </div>
+          </div>
+          <div
+            class="list-tasks-completed max-h-[15rem] overflow-y-scroll sm:max-h-[25rem]"
+          >
+            <!-- <div class="task flex items-start mt-4">
 						<div class="task-checkbox w-6 h-6 border-2 flex items-center justify-center border-gray-200 rounded-md cursor-pointer mt-0.5">
 							<svg class="pointer-events-none" width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M1 6L3.91667 9L9 1" stroke="#575767" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -47,21 +93,33 @@
 						</div>
 						<div class="task-deskription w-full flex flex-col ml-4 opacity-50">
 							<input value="Upload 1099-R to TurboTax" class="task-title bg-transparent focus-visible:outline-none text-[#575767] text-lg font-medium" placeholder="Task">
-							</input>
 							<input value="💰 Finance" class="task-сategory bg-transparent focus-visible:outline-none text-[#B9B9BE] font-semibold mt-1" placeholder="Category">
-							</input>
 						</div>
 					</div> -->
-				</div>
-			</div>
-		</div>
-		<button style="background: linear-gradient(180deg, #3F4EA0 0%, #473FA0 100%);" class="add-btn absolute right-4 bottom-10 border-2 border-[#515CC6] p-3 rounded-full shadow">
-			<svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M11 1V21M1 11H21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="bevel"/>
-			</svg>
-		</button>
-		
-	</div>
-	<script src="./js/index.bundle.js"></script>
-</body>
+          </div>
+        </div>
+      </div>
+      <button
+        style="background: linear-gradient(180deg, #3f4ea0 0%, #473fa0 100%)"
+        class="add-btn absolute bottom-10 right-4 rounded-full border-2 border-[#515CC6] p-3 shadow"
+      >
+        <svg
+          width="22"
+          height="22"
+          viewBox="0 0 22 22"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M11 1V21M1 11H21"
+            stroke="white"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="bevel"
+          />
+        </svg>
+      </button>
+    </div>
+    <script src="./js/index.bundle.js"></script>
+  </body>
 </html>
