--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,19 +14,17 @@
     >
       <div class="border-b-2 border-gray-200 pb-4">
         <p class="date-title mb-2 text-3xl font-bold"></p>
-        <p class="status-title text text-[#575767]">
-          0 incomplete, 0 completed
-        </p>
+        <p class="status-title text text-[#575767]"></p>
       </div>
       <div class="tasks-container mt-4 flex flex-col sm:flex-row">
         <div class="sm:w-1/2">
-          <div class="text-lg font-bold text-[#575767]">
+          <div class="text-lg font-bold text-[#575767] mb-4">
             <div class="select-none">Incomplete</div>
           </div>
           <div
             class="list-tasks-incompleted max-h-[15rem] overflow-y-scroll sm:max-h-[25rem]"
           >
-            <!-- <div id="" class="task mt-4 flex items-start">
+            <!-- <div id="" class="task mt-4 first:mt-0 flex items-start">
               <div
                 class="task-checkbox mt-0.5 flex h-6 w-6 cursor-pointer items-center justify-center rounded-md border-2 border-gray-200"
               >
@@ -64,8 +62,8 @@
             </div> -->
           </div>
         </div>
-        <div class="mt-4 sm:mt-0 sm:w-1/2">
-          <div class="flex items-center text-lg font-bold text-[#575767]">
+        <div class="mt-4 sm:mt-0 sm:w-1/2 sm:ml-4">
+          <div class="mb-4 flex items-center text-lg font-bold text-[#575767]">
             <div class="select-none">Completed</div>
             <div class="clear-done-tasks ml-1 cursor-pointer">
               <svg
